@@ -30,3 +30,7 @@ class NodesOnly(Denial):
 class SignatureFailure(Identified, Denial):
     pass
 
+
+class PeerAlreadyConnected(Denial):
+    pass
+
