@@ -1,4 +1,4 @@
-from .base import Nonced, Timestamped, Identified, Labeled
+from .base import Nonced, Timestamped, Identified, Autographed, Labeled
 
 
 class NodeOn(Nonced, Timestamped, Identified):
@@ -44,28 +44,25 @@ class NodeOn(Nonced, Timestamped, Identified):
         return cls(timestamp, uuid, synced, nonce)
 
 
-class Signed(Identified, Labeled, Timestamped):
-    VERSION_SIZE = 1 # bytes
+class Signed(Autographed, Identified, Labeled, Timestamped):
     NAME_SIZE = 1 # bytes
     KEY_SIZE_SIZE = 2 # bytes
     ADDR_SIZE_SIZE = 2 # bytes
-    SIG_SIZE = 512 # bytes
 
     def __init__(self, version, uuid, label, name_id, key, address, signature,
                  node_uuid, created):
-        self.version = version
+        Autographed.__init__(self, version, signature)
         Identified.__init__(self, uuid)
         Labeled.__init__(self, label)
         self.name = name_id
         self.key = key
         self.address = address
-        self.signature = signature
         self.node_uuid = node_uuid
         Timestamped.__init__(self, created)
 
     def _str_(self):
         return ', '.join([
-            f'version={self.version}',
+            Autographed._str_(self),
             Identified._str_(self),
             Labeled._str_(self),
             f'name={self.name}',
@@ -74,10 +71,7 @@ class Signed(Identified, Labeled, Timestamped):
         ])
 
     def to_bytes(self, handler):
-        ver = self.version
-        assert ver > 0 and ver < 256**self.VERSION_SIZE
-        ver = ver.to_bytes(self.VERSION_SIZE, handler.BYTE_ORDER)
-
+        autograph = Autographed.to_bytes(self, handler)
         uuid = Identified.to_bytes(self, handler)
         label = Labeled.to_bytes(self, handler)
 
@@ -95,20 +89,19 @@ class Signed(Identified, Labeled, Timestamped):
         assert addr_size > 0 and addr_size < 256**self.ADDR_SIZE_SIZE
         addr_size = addr_size.to_bytes(self.ADDR_SIZE_SIZE, handler.BYTE_ORDER)
 
-        sig = self.signature
-        assert len(sig) == self.SIG_SIZE
-
         node_uuid = self._uuid_bytes_(handler, self.node_uuid)
         created = Timestamped.to_bytes(self, handler)
 
-        return ver + uuid + label + name + key_size + key \
-            + addr_size + addr + sig + node_uuid + created
+        return autograph + uuid + label + name + key_size + key \
+            + addr_size + addr + node_uuid + created
 
     @classmethod
     def recv(cls, handler):
-        ver = handler.recv_bytes(cls.VERSION_SIZE)
+        ver = cls._version_(handler)
         if ver is None: return None
-        ver = int.from_bytes(ver, handler.BYTE_ORDER)
+
+        sig = cls._signature_(handler)
+        if sig is None: return None
 
         uuid = cls._uuid_(handler)
         if uuid is None: return None
@@ -133,10 +126,6 @@ class Signed(Identified, Labeled, Timestamped):
         addr = handler.recv_bytes(size)
         if addr is None: return None
         addr = str(addr, handler.ENCODING)
-
-        sig = handler.recv_bytes(cls.SIG_SIZE)
-        if sig is None: return None
-        sig = bytes(sig)
 
         node_uuid = cls._uuid_(handler)
         if node_uuid is None: return None
